# Tankoban-2

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BOOK_READER_FIX_TODO.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMIC_READER_FIX_TODO.md  CONTRIBUTING.md  LICENSE  NATIVE_D3D11_TODO.md  PLAYER_COMPARATIVE_AUDIT_TODO.md  PLAYER_PERF_FIX_TODO.md  PLAYER_POLISH_TODO.md  PLAYER_STREMIO_PARITY_FIX_TODO.md  README.md  REPO_HYGIENE_FIX_TODO.md  SIDECAR_DISPATCHER_NON_BLOCKING_FIX_TODO.md  SKILL_DISCIPLINE_FIX_TODO.md  STREAM_ENGINE_FIX_TODO.md  STREAM_ENGINE_REBUILD_TODO.md  STREAM_HTTP_PREFER_FIX_TODO.md  STREAM_PARITY_TODO.md  STREAM_PLAYBACK_FIX_TODO.md  STREAM_PLAYER_DIAGNOSTIC_FIX_TODO.md  STREAM_SERVER_PIVOT_TODO.md  STREAM_STALL_FIX_TODO.md  STREAM_STALL_UX_FIX_TODO.md  STREAM_UX_PARITY_ADD_LATER.md  STREAM_UX_PARITY_TODO.md  SUBTITLE_HEIGHT_POSITION_TODO.md  TANKOLIBRARY_ABB_FIX_TODO.md  TANKOLIBRARY_FIX_TODO.md  TANKORENT_FIX_TODO.md  THEME_SYSTEM_FIX_TODO.md  VIDEO_PLAYER_FIX_TODO.md  _build_log.txt  _build_test.bat  (+10 more)
.claude/: settings.json
.claude/agents/: commit-sweeper.md  prompt-architect.md
.claude/commands/: brief.md  build-verify.md  commit-sweep.md  repo-health.md  rotate-chat.md
.claude/scripts/: congress-check.sh  memory-health.sh  pre-rtc-checker.sh  scan-pending-commits.sh  session-brief.sh
.claude/telemetry/: skill-discipline.jsonl
.github/workflows/: build.yml  release.yml  repo-consistency.yml
agents/: ASSISTANTS.md  CONGRESS.md  CONTRACTS.md  COORDINATOR.md  GOVERNANCE.md  HELP.md  ONBOARDING.md  REVIEW.md  STATUS.md  VERSIONS.md  assistant1_report.md  assistant1_report_player.md  assistant2_report.md  assistant2_report_player.md  chat.md  congress_prep_library.md  congress_prep_player.md  master_checklist.md  nyaa_search_reference.md  stream_mode_roadmap.md  tankorent_nyaa_todo.md  tankoyomi_mihon_todo.md  video_player_rendering_roadmap.md
agents/audits/: README.md  REQUEST_zoom_overscan_2026-04-23.md  av_sub_sync_after_stall_2026-04-21.md  book_reader_2026-04-15.md  cinemascope_aspect_2026-04-16.md  claude_mem_persistence_diagnosis_2026-04-25.md  comic_reader_2026-04-15.md  comparative_player_2026-04-20_p1_transport.md  comparative_player_2026-04-20_p2_subtitles.md  comparative_player_2026-04-20_p3_hdr_filters.md  comparative_player_2026-04-23_p1_transport.md  congress6_assistant1_adversarial_AB_2026-04-18.md  congress6_assistant2_adversarial_CD_2026-04-18.md  congress6_integration_2026-04-18.md  congress6_player_sidecar_2026-04-18.md  congress6_sources_torrent_2026-04-18.md  congress6_stream_primary_2026-04-18.md  edge_tts_2026-04-16.md  evidence_phase1_smoke_player_debug_192000.txt  evidence_phase2a_smoke_player_debug_202005.txt  evidence_phase2b_smoke_player_debug_230433.txt  evidence_player_debug_dip_smoke_20260424_132114.txt  evidence_player_debug_stream_stall_audit_rerun_141745.txt  evidence_streamserver_phase0_ffprobe.json  evidence_streamserver_phase0_mpv_log.txt  mcp_smoke_harness_2026-04-19.md  player_hud_right_audit_2026-04-24.md  player_stremio_mpv_parity_2026-04-17.md  qt_theme_feasibility_2026-04-25.md  stream_a_engine_2026-04-16.md  stream_d_player_2026-04-17.md  stream_mode_2026-04-15.md  stremio_tuning_ab_2026-04-23.md  tankoban_max_replication_map_2026-04-24.md  tankolibrary_2026-04-21.md  tankorent_2026-04-16.md  tankostream_playback_2026-04-15.md  tankostream_playback_probe_2026-04-15.md  tankostream_session_lifecycle_2026-04-15.md  uia_inspection_2026-04-22.md  (+6 more)
agents/chat_archive/: 2026-04-16_chat_lines_8-19467.md  2026-04-16_chat_lines_8-3642.md  2026-04-18_chat_lines_8-4038.md  2026-04-20_chat_lines_8-3978.md  2026-04-24_chat_lines_8-5253.md  README.md
agents/congress_archive/: 2026-03-25_comic-reader.md  2026-03-25_polish-parity.md  2026-03-25_video-player.md  2026-04-16_library-ux-1-1-parity.md  2026-04-18_congress6_stremio_audit.md  2026-04-18_stream_engine_rebuild.md  2026-04-19_stream_stall_tactics.md  2026-04-23_reference_driven_player_bug_closure.md  README.md
agents/congress_positions/: agent1_response.md  agent2_position.md  agent3_position.md  agent4_position.md  agent5_position.md
agents/prototypes/: 1.1_addon_data_types.h  1.2_addon_transport.cpp  1.3_addon_registry.cpp  1.4_cinemeta_client_rewire.cpp  1.5_torrentio_client_rewire.cpp  2.1_addon_manager_screen.cpp  (+16 more)
build_old/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
installer/: tankoban.nsi
native_sidecar/: CMakeLists.txt  README.md  build.ps1  build_qrhi.bat
native_sidecar/src/: audio_decoder.cpp  audio_decoder.h  av_sync_clock.cpp  av_sync_clock.h  d3d11_gl_bridge.cpp  d3d11_presenter.cpp  d3d11_presenter.h  demuxer.cpp  demuxer.h  diag_log.h  encoding_detect.cpp  encoding_detect.h  filter_graph.cpp  filter_graph.h  gpu_renderer.cpp  gpu_renderer.h  gpu_renderer_avutil.c  heartbeat.cpp  heartbeat.h  main.cpp  overlay_renderer.cpp  overlay_renderer.h  overlay_shm.cpp  overlay_shm.h  platform.h  protocol.cpp  protocol.h  qrhi_canvas.cpp  ring_buffer.cpp  ring_buffer.h  shm_helpers.cpp  shm_helpers.h  state_machine.cpp  state_machine.h  stream_prefetch.cpp  stream_prefetch.h  subtitle_renderer.cpp  subtitle_renderer.h  video_decoder.cpp  video_decoder.h  (+1 more)
native_sidecar/tests/: CMakeLists.txt  test_encoding_detect.cpp  test_filter_graph.cpp  test_hwaccel.cpp  test_overlay_renderer.cpp  test_protocol.cpp  test_ring_buffer.cpp  test_subtitle_renderer.cpp
out_old3/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
resources/: resources.qrc  tankoban.rc
scripts/: build_deps.cmd  build_lt_msvc.cmd  compare-mpv-tanko.ps1  measure-smoke.ps1  repo-consistency.sh  repo-health.ps1  run-ab-smoke.ps1  runtime-health.ps1  setup_libtorrent_msvc.bat  stop-tankoban.ps1  uia-dump.ps1  version-bump.ps1
src/: main.cpp
src/tests/: CMakeLists.txt  README.md  test_audiobook_meta_cache.cpp  test_stream_piece_waiter.cpp  test_stream_prioritizer.cpp  test_stream_seek_classifier.cpp
tools/: analyze_vsync.py  compile_shaders.bat  tankoctl.cpp
(+516 files in other folders)
